--- a/src/styles/pages/auth.scss
+++ b/src/styles/pages/auth.scss
@@ -29,35 +29,24 @@
   .overlay-logo-2 {
     position: absolute;
     bottom: 50%;
-    width: 700px;
-    height: auto;
+    width: auto;
+    height: 78vh;
     z-index: -1;
     opacity: 0.9;
     filter: blur(10px);
-    animation-name: blur;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    animation: blur 2s ease-in-out infinite alternate;
     transform: translate(0%, 50%);
+    transition: all 0.3s ease;
   }
-  .forgot-password {
-    color: #2c73f8;
-    font-size: 16px;
-    font-weight: 500;
-    text-decoration: underline;
-    cursor: pointer;
-    display: block;
-    text-align: end;
-  }
-
+  
   .overlay-logo {
-    right: -350px;
+    right: -21%; /* -50% ni kamaytirdim */
   }
-
+  
   .overlay-logo-2 {
-    left: -350px;
+    left: -21%; /* -50% ni kamaytirdim */
   }
+  
   @keyframes blur {
     0% {
       filter: blur(10px);
@@ -68,6 +57,7 @@
       opacity: 0.9;
     }
   }
+  
 }
 
 .auth-content {
