--- a/src/styles/pages/auth.scss
+++ b/src/styles/pages/auth.scss
@@ -9,6 +9,7 @@
   animation-name: opacity;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
+  overflow: hidden;
   .forgot-password{
     color: #2c73f8;
     font-size: 16px;
