--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -17,6 +17,7 @@ body {
   line-height: $line-height-base;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 img {
