--- a/src/styles/pages/auth.scss
+++ b/src/styles/pages/auth.scss
@@ -10,7 +10,7 @@
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
   overflow: hidden;
-  .forgot-password{
+  .forgot-password {
     color: #2c73f8;
     font-size: 16px;
     font-weight: 500;
@@ -18,6 +18,13 @@
     cursor: pointer;
     text-align: end;
   }
+  .error-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   .logo {
     width: 80px;
     margin-bottom: 20px;
@@ -47,15 +54,15 @@
     transform: translate(0%, 50%);
     transition: all 0.3s ease;
   }
-  
+
   .overlay-logo {
     right: -21%; /* -50% ni kamaytirdim */
   }
-  
+
   .overlay-logo-2 {
     left: -21%; /* -50% ni kamaytirdim */
   }
-  
+
   @keyframes blur {
     0% {
       filter: blur(10px);
@@ -66,7 +73,6 @@
       opacity: 0.9;
     }
   }
-  
 }
 
 .auth-content {
@@ -107,6 +113,16 @@
           border-color: #3478f7;
         }
       }
+
+      &.error {
+        input {
+          border-color: #ff3b30;
+          &:focus {
+            border-color: #ff3b30;
+          }
+        }
+      }
+
       input:-webkit-autofill,
       input:-webkit-autofill:hover,
       input:-webkit-autofill:focus,
@@ -142,6 +158,15 @@
         transform: translateY(-50%);
       }
     }
+
+    .error-message {
+      color: #ff3b30;
+      font-size: 15px;
+      font-weight: 500;
+      text-align: start;
+      margin: 0 !important;
+    }
+
     button {
       width: 100%;
       height: 60px;
@@ -152,16 +177,20 @@
       font-weight: 500;
       color: #fff;
       cursor: pointer;
+      transition: all 0.3s ease;
+
+      &:hover {
+        background-color: #2861d9;
+      }
     }
   }
 }
 
-
 @keyframes opacity {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
