--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -5,55 +5,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-html {
-  font-size: 16px;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  font-family: $font-family-base;
-  line-height: $line-height-base;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
-button,
-input,
-select,
-textarea {
-  font: inherit;
-}
-
-a {
-  color: inherit;
   text-decoration: none;
 }
 
-ul,
-ol {
-  list-style: none;
+body {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: $font-weight-bold;
-  line-height: 1.2;
-  margin-bottom: $spacing-md;
-}
-
-p {
-  margin-bottom: $spacing-md;
-}
