--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,28 +1,28 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 // Abstracts
 @import "abstracts/variables";
 @import "abstracts/mixins";
 @import "abstracts/functions";
 
 // Base
-@import "base/reset";
-@import "base/typography";
-@import "base/base";
+@import "./base/reset";
+@import "./base/typography";
+@import "./base/base";
 
 // Components
-@import "components/buttons";
-@import "components/cards";
-@import "components/forms";
+@import "./components/forms";
+@import "./components/buttons";
 
 // Layout
-@import "layout/header";
-@import "layout/footer";
-@import "layout/grid";
+@import "./layout/header";
+@import "./layout/footer";
+// @import "./layout/navigation";
 
 // Pages
-@import "pages/home";
-@import "pages/products";
-@import "pages/auth";
+@import "./pages/home";
+@import "./pages/auth";
+@import "./pages/calendar";
 
 // Themes
-@import "themes/light";
-@import "themes/dark";
+// @import "./themes/default";
+@import "./themes/dark";
