--- a/src/styles/pages/auth.scss
+++ b/src/styles/pages/auth.scss
@@ -84,8 +84,6 @@
   form {
     display: flex;
     flex-direction: column;
-    // align-items: start;
-    // justify-content: start;
     gap: 15px;
     .input-container {
       width: 500px;
@@ -121,6 +119,12 @@
             border-color: #ff3b30;
           }
         }
+
+        .user-icon,
+        .password-icon {
+          filter: invert(39%) sepia(98%) saturate(1234%) hue-rotate(327deg)
+            brightness(97%) contrast(101%);
+        }
       }
 
       input:-webkit-autofill,
@@ -146,6 +150,7 @@
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
+        transition: all 0.3s ease;
       }
 
       .eye-icon {
