--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -110,7 +110,27 @@
     .history {
       width: 100%;
       margin-top: 20px;
-
+      .history-list {
+        overflow-y: auto;
+        width: 100%;
+        // height: 300px;
+        margin-top: 20px;
+        .history-item {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 25px 20px ;
+          border-radius: 20px;
+          box-shadow: 0 0 10px 0 rgba(179, 179, 179, 0.1);
+          background-color: #f5f5f5;
+          margin-bottom: 10px;
+          h3 {
+            font-size: 20px;
+            font-weight: 600;
+            color: #000;
+          }
+        }
+      }
       .line {
         display: flex;
         align-items: center;
