--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -33,4 +33,20 @@ header.header-profile {
       height: 20px;
     }
   }
+  .btns{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    .logout {
+      height: 50px;
+      width: 80px;
+      background: #f5f5f5;
+      border: 1px solid #ff0000;
+      color: #ff0000;
+      font-weight: 50;
+      font-size: 16px;
+      border-radius: 15px;
+      cursor: pointer;
+    }
+  }
 }
