--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,9 @@
 @import "./pages/home";
 @import "./pages/auth";
 @import "./pages/calendar";
+@import "./pages/customer";
+// @import "./pages/settings";
+// @import "./pages/reports";
 
 // Themes
 // @import "./themes/default";  
