--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,7 @@
 @import "./pages/calendar";
 @import "./pages/customer";
 @import "./pages/products";
+@import "./pages/DebtAdd";
 // @import "./pages/settings";
 // @import "./pages/reports";
 
