--- a/src/pages/CustomerDetail.css
+++ b/src/pages/CustomerDetail.css
@@ -186,3 +186,25 @@
     width: 100%;
   }
 }
+
+.debts-list-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+
+}
+
+
+
+.debts-list-header button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  background-color: #1677ff;
+  color: #fff;
+  padding: 10px 18px;
+  border-radius: 10px;
+}
+
+
