--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,9 +26,10 @@
 @import "./pages/customer";
 @import "./pages/products";
 @import "./pages/DebtAdd";
+@import "./pages/debtDetail";
 // @import "./pages/settings";
 // @import "./pages/reports";
 
 // Themes
-// @import "./themes/default";  
+// @import "./themes/default";
 @import "./themes/dark";
