--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 // Abstracts
 @use "abstracts/variables" as *;
 @use "abstracts/mixins" as *;
@@ -43,8 +42,11 @@
 
 // Themes
 @use "themes/default" as *;
-@import "./themes/dark";
+@use "themes/dark" as *;
 
 // Utilities
 @use "utilities/helpers" as *;
 @use "utilities/animations" as *;
+
+// Font imports
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
